--- a/storage/package.json
+++ b/storage/package.json
@@ -40,6 +40,7 @@
   "author": "lukajcb",
   "type": "module",
   "scripts": {
+    "start": "pnpm exec tsx src/server.ts",
     "build": "tsc",
     "test": "vitest run",
     "coverage": "vitest run --coverage",
