--- a/ui/package.json
+++ b/ui/package.json
@@ -19,13 +19,13 @@
     "@noble/curves": "2.0.1",
     "@noble/hashes": "2.0.1",
     "@tailwindcss/vite": "^4.1.18",
-    "@types/papaparse": "^5.5.1",
+    "@types/papaparse": "5.5.1",
     "@zip.js/zip.js": "^2.8.11",
     "cbor-x": "1.6.0",
     "leaflet": "^1.9.4",
     "maplibre-gl": "5.9.0",
     "modern-screenshot": "^4.6.7",
-    "papaparse": "^5.5.3",
+    "papaparse": "5.5.3",
     "pathhub-client": "link:../../../Library/pnpm/global/5/node_modules/pathhub-client",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/leaflet": "^1.9.21",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
