--- a/ui/package.json
+++ b/ui/package.json
@@ -19,6 +19,7 @@
     "@noble/curves": "2.0.1",
     "@noble/hashes": "2.0.1",
     "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/react-query": "^5.90.16",
     "@types/papaparse": "5.5.1",
     "@zip.js/zip.js": "^2.8.11",
     "cbor-x": "1.6.0",
