Combine auth and storage services

--- a/authentication/docker-compose.yml
+++ b/authentication/docker-compose.yml
@@ -15,5 +15,19 @@ services:
     volumes:
       - ./src/sql/schema.sql:/docker-entrypoint-initdb.d/schema.sql:ro
 
+  minio:
+    image: minio/minio:latest
+    container_name: minio
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    volumes:
+      - minio-data:/data
+    command: server /data --console-address ":9001"
+
 volumes:
   pgdata:
+  minio-data:
