--- a/authentication/package.json
+++ b/authentication/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pathhub-authentication",
+  "name": "user-service",
   "version": "0.0.1",
   "description": "",
   "bugs": {
@@ -12,6 +12,7 @@
     "dist"
   ],
   "dependencies": {
+    "@aws-sdk/client-s3": "3.908.0",
     "@fastify/helmet": "13.0.2",
     "@fastify/postgres": "6.0.2",
     "@serenity-kit/opaque": "0.9.0",
