--- a/ui/package.json
+++ b/ui/package.json
@@ -26,7 +26,7 @@
     "maplibre-gl": "5.9.0",
     "modern-screenshot": "^4.6.7",
     "papaparse": "5.5.3",
-    "pathhub-client": "link:../../../Library/pnpm/global/5/node_modules/pathhub-client",
+    "pathhub-client": "workspace:*",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-leaflet": "^5.0.0",
