--- a/authentication/package.json
+++ b/authentication/package.json
@@ -13,6 +13,7 @@
   ],
   "dependencies": {
     "@aws-sdk/client-s3": "3.908.0",
+    "@fastify/cors": "^11.2.0",
     "@fastify/helmet": "13.0.2",
     "@fastify/postgres": "6.0.2",
     "@serenity-kit/opaque": "0.9.0",
@@ -26,6 +27,7 @@
     "@eslint/js": "9.37.0",
     "@types/node": "24.7.0",
     "@types/pg": "^8.15.5",
+    "@vitest/coverage-v8": "3.2.4",
     "eslint": "9.36.0",
     "eslint-plugin-import": "2.32.0",
     "madge": "8.0.0",
@@ -33,8 +35,7 @@
     "tsx": "4.20.5",
     "typescript": "5.9.2",
     "typescript-eslint": "8.44.0",
-    "vitest": "3.2.4",
-    "@vitest/coverage-v8": "3.2.4"
+    "vitest": "3.2.4"
   },
   "repository": {
     "type": "git",
