--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,17 +1,17 @@
 {
   "compilerOptions": {
-    "jsx": "react",
     "target": "es2024",
     "useDefineForClassFields": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "lib": ["ES2022", "DOM", "DOM.Iterable", "ESNext.Disposable"],
     "noEmit": false,
     "outDir": "dist",
     "declaration": true,
     "incremental": true,
     "sourceMap": true,
     "resolveJsonModule": true,
-    "types": ["vitest/globals"],
+    "types": ["node", "vitest/globals"],
 
     /* Linting */
     "strict": true,
