--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -11,7 +11,7 @@
     "incremental": true,
     "sourceMap": true,
     "resolveJsonModule": true,
-    "types": ["node", "vitest/globals"],
+    "types": ["vitest/globals"],
 
     /* Linting */
     "strict": true,
