--- a/client/package.json
+++ b/client/package.json
@@ -59,6 +59,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
+    "typecheck": "tsc",
     "dev": "tsc --watch",
     "test": "vitest run",
     "test:browser": "vitest run --config vitest.browser.config.ts",
