--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Typecheck, lint & format
+        run: pnpm verify
+
       - name: Start infra (Postgres + MinIO)
         run: docker compose -f authentication/docker-compose.yml up -d
 
